integrated zerolog
