# docs/swagger.json
@@ -11,7 +11,7 @@
     "paths": {
         "/recipes": {
             "get": {
-                "description": "List Recipes",
+                "description": "Returns list of recipes",
                 "consumes": [
                     "application/json"
                 ],
@@ -26,7 +26,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.ListRecipes"
+                            "$ref": "#/definitions/models.ListRecipes"
                         }
                     },
                     "500": {
@@ -56,7 +56,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.AddUpdateRecipe"
+                            "$ref": "#/definitions/models.AddUpdateRecipe"
                         }
                     }
                 ],
@@ -105,7 +105,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/main.ListRecipes"
+                            "$ref": "#/definitions/models.ListRecipes"
                         }
                     },
                     "400": {
@@ -124,6 +124,54 @@
             }
         },
         "/recipes/{id}": {
+            "get": {
+                "description": "Returns a single recipe",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "recipes"
+                ],
+                "summary": "Get a recipe",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Recipe ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.ViewRecipe"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.HTTPError"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "Update a recipe",
                 "consumes": [
@@ -150,7 +198,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/main.AddUpdateRecipe"
+                            "$ref": "#/definitions/models.AddUpdateRecipe"
                         }
                     }
                 ],
@@ -214,7 +262,7 @@
         }
     },
     "definitions": {
-        "main.AddUpdateRecipe": {
+        "models.AddUpdateRecipe": {
             "type": "object",
             "required": [
                 "ingredients",
@@ -269,7 +317,7 @@
                 }
             }
         },
-        "main.ListRecipes": {
+        "models.ListRecipes": {
             "type": "object",
             "properties": {
                 "count": {
@@ -278,13 +326,19 @@
                 "data": {
                     "type": "array",
                     "items": {
-                        "$ref": "#/definitions/main.ViewRecipe"
+                        "$ref": "#/definitions/models.ViewRecipe"
                     }
                 }
             }
         },
-        "main.ViewRecipe": {
+        "models.ViewRecipe": {
             "type": "object",
+            "required": [
+                "ingredients",
+                "instructions",
+                "name",
+                "tags"
+            ],
             "properties": {
                 "id": {
                     "type": "string",
